--- a/daily-logs/2019-06-05_廉老师让思考的关于模型对于具体问题的选择问题.md
+++ b/daily-logs/2019-06-05_廉老师让思考的关于模型对于具体问题的选择问题.md
@@ -1,6 +1,6 @@
 # 关于不同具体问题的模型选择问题
 
-<img src="https://github.com/dyngq/daily-log/blob/master/pictures/20190605_1.jpg?raw=true" width="80%" height="80%" style="margin:0 auto" />
+<img src="https://github.com/dyngq/daily-log/blob/master/pictures/20190605_1.jpg?raw=true" width="80%" height="80%"/>
 
 - 这个问题我好好考虑了一下，以我现在的理解并且找了一些相关的资料，也问了安师兄一下。
 
