--- a/daily-logs/2019-07-22_服务器搭建博客总结.md
+++ b/daily-logs/2019-07-22_服务器搭建博客总结.md
@@ -24,9 +24,17 @@
 - 主题的选择有很多
 - 主题配置 [next主题配置文档链接](https://theme-next.iissnan.com/getting-started.html)
 
-### D. 搭建CDN加速（舍弃）
+### D. 动态背景动画
 
-### E. 选择双仓库多解析
+- 需要git clone一个库，否则不会生效
+
+### E. 杂七杂八的配置很多
+
+- 根据自己需要来，需要的时候再配置就可以了。
+
+### F. 搭建CDN加速（舍弃）
+
+### G. 选择双仓库多解析
 
 - 如果是直接在服务器上运行hexo服务的话就不需要，这一条这上一条的CDN搭建的目的原因都是因为，百度无法爬取Github Pages的页面，Google无法访问阿里DNS解析的dns3.hichina.com, dns4.hichina.com服务器，所以无法完成搜索引擎的收录工作。
 - 谷歌收录软件（Google Search Console）无法访问www.dyngq.top但是最后完成了对dyngq.top的网站地图sitemap的提交，有点意外，应该不是无法访问服务器的缘故，说不清楚，还待研究
