--- a/daily-logs/2019-07-22_服务器搭建博客总结.md
+++ b/daily-logs/2019-07-22_服务器搭建博客总结.md
@@ -38,3 +38,5 @@
 
 - 如果是直接在服务器上运行hexo服务的话就不需要，这一条这上一条的CDN搭建的目的原因都是因为，百度无法爬取Github Pages的页面，Google无法访问阿里DNS解析的dns3.hichina.com, dns4.hichina.com服务器，所以无法完成搜索引擎的收录工作。
 - 谷歌收录软件（Google Search Console）无法访问www.dyngq.top但是最后完成了对dyngq.top的网站地图sitemap的提交，有点意外，应该不是无法访问服务器的缘故，说不清楚，还待研究
+- google和百度的收录应该都搞定了，问题关键在于不要加www.
+- 不管怎么样，提交的链接想尽办法不要加www.，直接[http://dyngq.top](http://dyngq.top)就可以了
