--- a/daily-logs/2019-07-22_服务器搭建博客总结.md
+++ b/daily-logs/2019-07-22_服务器搭建博客总结.md
@@ -3,6 +3,10 @@
 - 很多人都有自己的博客，只有Github的话不够美观直接，建立博客也是熟悉服务器的一个过程。
 - 因为之前搭建过，由于灵越3543上自用的Ubuntu上软件依赖混乱缺失了很多，无法安装SSH服务等，所以直接格式化了，扩大了空间，重装了系统；所以需要将原来的Hexo博客及逆行转移，之后进行了更详细的优化，购买了域名等等。
 
+## 阿里云ECS+OSS （2020更新方案）
+
+1. Nginx反向代理，强制https访问，80端口重定向443端口 [参考链接：Nginx的https配置记录以及http强制跳转到https的方法梳理](https://zhuanlan.zhihu.com/p/32055783)
+
 ## dyngq.top
 
 ### A. 使用了Hexo博客
